           GL_OES_depth24 and GL_OES_depth32
- Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
- Change (Windows): "PLFrontendQt" includes simplification: "Include\Qt" instead of "Include\Qt\Qt"
- Change: Layout changes within the LaTex documents
- Change: "PLInput": Changed the names of some controls for a more uniform naming schema to make it easier to guess e.g. the control name of a keyboard key
- Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
- Change: Added enhanced "PixelLightBuild"-document as replacement for the "BUILD" text file (got confusing as it grew)
- Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
- Change: Updated sample sound files to make them work with FMOD Ex as well
- Bugfix: Loop and 2D are now working within the FMOD Ex sound backend
- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture decompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
- Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken
- Bugfix (Windows): "PLFrontendOS::OSWindowWindows::SetPositionSize()" was not setting the window size correctly (the window border must be ignored)
- Bugfix (Linux): "PLFrontendOS::OSWindowLinux::GetX()" & "PLFrontendOS::OSWindowLinux::GetY()" were not returning the window position correctly (window decoration issue)
- Bugfix: "PLFrontendPLGui" was not returning and setting the window size correctly (the window border must be ignored)
- Bugfix: Uncompressed dds images with mipmaps and "DDS_LINEARSIZE" set were not loaded correctly