@@ -136,4 +136,4 @@ MS Windows must be able to find the PixelLight \ac{DLL}s, meaning you have to ad
 
 
 \paragraph{Registry Key}
-You also need to add a key to the registry, so that the path to the build PixelLight runtime can be found during runtime. This key has to be at "HKEY\_LOCAL\_MACHINE/SOFTWARE/PixelLight/PixelLight-SDK/Runtime" (or at "HKEY\_LOCAL\_MACHINE/SOFTWARE/Wow6432Node/PixelLight/PixelLight-SDK/Runtime" if you are using a \SI{32}{\bit} PixelLight SDK on a \SI{64}{\bit} MS Windows). This "Runtime"-key has e.g. the string value "C:/PixelLight/Bin/Runtime/x86/" (same as the PATH environment variable entry mentioned above).
+You may also want to add a key to the registry, so that the path to the build PixelLight runtime can be found in case you're using the static version of \emph{PLCore}. This key has to be at "HKEY\_LOCAL\_MACHINE/SOFTWARE/PixelLight/PixelLight-SDK/Runtime" (or at "HKEY\_LOCAL\_MACHINE/SOFTWARE/Wow6432Node/PixelLight/PixelLight-SDK/Runtime" if you are using a \SI{32}{\bit} PixelLight SDK on a \SI{64}{\bit} MS Windows). This "Runtime"-key has e.g. the string value "C:/PixelLight/Bin/Runtime/x86/" (same as the PATH environment variable entry mentioned above).
