@@ -8,6 +8,7 @@ Changes in PixelLight 0.9.9-R1 (not yet released)
 - Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
 - Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
 - Change (Windows): "PLFrontendQt" includes simplification: "Include\Qt" instead of "Include\Qt\Qt"
+- Change: When developing with PixelLight, the registry key (or environment variable) is now only used as fallback in case PLCore is used statically, so, usually you no longer need this registry key
 - Change: Layout changes within the LaTex documents
 - Change: "PLInput": Changed the names of some controls for a more uniform naming schema to make it easier to guess e.g. the control name of a keyboard key
 - Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
